tests/coverage/misc/fail/negative/009_unexpected_token_after_return.js
// Expected error: unexpected token - unmatched braces
} } }
